// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
Array [
  <button
    class="sc-bczRLJ eWIwMV"
  >
    Text
  </button>,
]
`;

exports[`Button Renders primary 1`] = `
Array [
  <button
    class="sc-bczRLJ jpJgZD"
  >
    Text
  </button>,
]
`;

exports[`Button Renders secondary 1`] = `
Array [
  <button
    class="sc-bczRLJ eWIwMV"
  >
    Text
  </button>,
]
`;
